app 2 with multiplication and username and password added in as well as a function page.

--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,12 @@
 <h2><pre> <%=firstname%> <%=lastname%>, thank you for taking the time to talk with us!
 You are <%=age%>, you have <%=hair%> hair, and <%=eyes%> eyes.
 Your favorite food is <%=food%> and your favorite drink is <%=drink%>.
-Finally, your three favorite numbers are <%=num1%>, <%=num2%>, and <%=num3%>.
+Your three favorite numbers are <%=num1%>, <%=num2%>, and <%=num3%>.
+The sum of your three favorite numers is <%=old_huh%>
+Your favorite numbers total times your age is <%=multiply%>
 
 It has been nice getting to know you better, have a nice day!</pre></h2>
+
 
 
 <form method = "post" action = "results">
